Fixing an issue with the bottom console action bar for short logs
* It wasn't calculating its height correctly because it never had a change to be a static element
* Also increasing the z-index of the job history dropdown to ensure it covers the console action bars

--- a/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
@@ -1849,7 +1849,7 @@ a:link#link-to-this-page, a:visited#link-to-this-page {
 
     &.open #buildlist-container {
       position: absolute;
-      z-index: 1;
+      z-index: 101;
       top: 43px;
       bottom: 0;
       overflow: auto;
